# data_ingestion_solution

./: README.md  pyproject.toml
backend/: start.py
backend/aws/: client.py
backend/contracts/: schema.py
backend/datasource/: api.py
backend/fakeapi/: nova_base.csv  start.py
frontend/: main.py
frontend/contract/: catalogo.py
frontend/datasource/: csv.py
frontend_linguicao/: main.py
frontend_linguicao/contract/: schema.py
frontend_linguicao/service/: aws.py
